Fix template dark mode to limit to .Table-cell

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -167,7 +167,7 @@ $tableResizeRightPadding: 20px;
   font-family: Roboto Condensed;
   cursor: default;
 
-  .dark & { color: $zorroa-whitegray; }
+  &.dark { color: $zorroa-whitegray; }
   &:not(.isOpen) { @include clampText; }
 }
 
